# pipechat-baml-comparison

./: .gitignore  README.md  SUBMISSION_SUMMARY.md  demo_final.py  demo_side_by_side.py  env.example  pyproject.toml  requirements-noaudio.txt  requirements.txt  run_comparison.py
config/: settings.py
docs/: comparison_report.md  setup.md
src/agents/: baml_agent.py  vanilla_agent.py  voice_baml_agent.py  voice_vanilla_agent.py
src/baml/: fact_checker.baml
src/comparison/: runner.py  voice_runner.py
src/utils/: metrics.py
src/voice/: voice_demo.py
tests/: test_data.py
voice_samples/: sample_calls.md
