[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipechat-baml-comparison"
version = "0.1.0"
description = "Comparison of vanilla prompting vs. BAML in Pipechat voice AI agents"
authors = [{name = "AI Developer", email = "dev@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pipecat>=0.0.1",
    "baml>=1.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "asyncio-mqtt>=0.11.0",
    "aiohttp>=3.8.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
audio = [
    "pyaudio>=0.2.11",
    "sounddevice>=0.4.6",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
